# anilist-month-list-rust

./: Cargo.toml
src/: main.rs  models.rs  utils.rs
