[package]
name = "anilist_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.4.2", features = ["json-using-serde", "https"] }
serde = { versoin = "1.0.126", features = ["derive"]}
serde_json = "1.0"

[profile.release]
panic = 'abort'